--- a/_posts/works/2013-09-28-pbckcode.js.md
+++ b/_posts/works/2013-09-28-pbckcode.js.md
@@ -1,7 +1,7 @@
 ---
 layout   : work
 category : works
-tagline  : "PBCKCode"
+tagline  : "PBCKCode.js"
 client   : Ø
 duration : Ø
 skills   : JavaScript
